# chinese-rand

./: Cargo.toml  README.md
src/: digit_sequences.rs  errors.rs  lib.rs  numeric.rs
src/currency/: mod.rs  renminbi.rs
src/gregorian/: date.rs  mod.rs  time.rs
src/raw/: fastrand_raw.rs  mod.rs
tests/: readme.rs
